perf: CommandRouter — LongAdder, debug guard, auth fast path, byte-level uppercase